fix z-index map

--- a/client/src/components/NewHikeForm/styles/mobile.module.scss
+++ b/client/src/components/NewHikeForm/styles/mobile.module.scss
@@ -93,6 +93,7 @@
   height: 500px;
   border: 1px solid $tertiary-green;
   border-radius: 5px;
+  z-index: 0;
 }
 
 .feedbackContainer {
